--- a/DashboardTry/Views/Shared/_Layout.cshtml
+++ b/DashboardTry/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                         <li class="nav-item ">
                             <a class="nav-link" href="./user.html">
                                 <i class="material-icons">person</i>
-                                <p>User Profile</p>
+                                <p>User Profile Github</p>
                             </a>
                         </li>
                         <li class="nav-item ">
